# spfetch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spfetch/: __init__.py  auth.py  client.py  destinations.py  exceptions.py  utils.py
tests/: test_client_init.py  test_client_ls.py  test_retry.py
